--- a/03-invoice-stream.ipynb
+++ b/03-invoice-stream.ipynb
@@ -10,6 +10,27 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "711be2cc-4f5a-4775-8963-e1640793dc22",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "display(dbutils.fs.ls(\"/FileStore/tables/dataset/invoices\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "0598fa46-2bca-4824-8ac9-5a9a2e239014",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -58,7 +79,7 @@
     "\n",
     "    def appendInvoices(self, flattenDF):\n",
     "        return(flattenDF.writeStream.format(\"delta\")\n",
-    "               .option(\"checkpointLocation\", f\"{self.base_data_dir}/checkpoints/invoices\")\n",
+    "               .option(\"checkpointLocation\", f\"{self.base_data_dir}/chekpoints/invoices\")\n",
     "               .outputMode(\"append\")\n",
     "               .toTable(\"invoice_line_items\")\n",
     "        )\n",
