--- a/04-invoice-stream-test-suite.ipynb
+++ b/04-invoice-stream-test-suite.ipynb
@@ -48,7 +48,7 @@
     "        spark.sql(\"drop table if exists invoice_line_items\")\n",
     "        dbutils.fs.rm(\"/user/hive/warehouse/invoice_line_items\", True)\n",
     "\n",
-    "        dbutils.fs.rm(f\"{self.base_data_dir}/chekpoint/invoices\", True)\n",
+    "        dbutils.fs.rm(f\"{self.base_data_dir}/chekpoints/invoices\", True)\n",
     "        dbutils.fs.rm(f\"{self.base_data_dir}/data/invoices\", True)\n",
     "\n",
     "        dbutils.fs.mkdirs(f\"{self.base_data_dir}/data/invoices\")\n",
@@ -65,7 +65,7 @@
     "        assert expected_count == actual_count, f\"Test failed! actual count is {actual_count}\"\n",
     "        print(\"Done\")\n",
     "\n",
-    "    def waitForMicroBatch(self, sleep=30):\n",
+    "    def waitForMicroBatch(self, sleep=5):\n",
     "        import time\n",
     "        print(f\"\\tWaiting for {sleep} seconds...\", end='')\n",
     "        time.sleep(sleep)\n",
@@ -85,16 +85,40 @@
     "        print(\"Testing second iteration of invoice stream...\") \n",
     "        self.ingestData(2)\n",
     "        self.waitForMicroBatch()\n",
-    "        self.assertResult(2506)\n",
+    "        self.assertResult(2510)\n",
     "        print(\"Validation passed.\\n\") \n",
     "\n",
     "        print(\"Testing third iteration of invoice stream...\") \n",
     "        self.ingestData(3)\n",
     "        self.waitForMicroBatch()\n",
-    "        self.assertResult(3990)\n",
+    "        self.assertResult(3994)\n",
     "        print(\"Validation passed.\\n\")\n",
     "\n",
     "        streamQuery.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "collapsed": true,
+     "inputWidgets": {},
+     "nuid": "9639a735-d0c4-4602-ac72-05f923a5d6d6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "select * from invoice_line_items\n"
    ]
   },
   {
@@ -130,6 +154,12 @@
    },
    "language": "python",
    "notebookMetadata": {
+    "mostRecentlyExecutedCommandWithImplicitDF": {
+     "commandId": 7708152687893361,
+     "dataframes": [
+      "_sqldf"
+     ]
+    },
     "pythonIndentUnit": 4
    },
    "notebookName": "04-invoice-stream-test-suite",
