--- a/05-streaming-batch.ipynb
+++ b/05-streaming-batch.ipynb
@@ -5,7 +5,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "5c1d3c8c-bad4-4ca6-963e-d8eb398a30ed",
      "showTitle": false,
@@ -57,7 +60,7 @@
     "    def appendInvoices(self, flattenedDF, trigger = \"batch\"):\n",
     "        sQuery = (flattenedDF.writeStream\n",
     "                    .format(\"delta\")\n",
-    "                    .option(\"checkpointLocation\", f\"{self.base_data_dir}/chekpoint/invoices\")\n",
+    "                    .option(\"checkpointLocation\", f\"{self.base_data_dir}/chekpoints/invoices\")\n",
     "                    .outputMode(\"append\")\n",
     "                    .option(\"maxFilesPerTrigger\", 1)                    \n",
     "                )\n",
