--- a/06-streaming-batch-test-suite.ipynb
+++ b/06-streaming-batch-test-suite.ipynb
@@ -39,7 +39,7 @@
    },
    "outputs": [],
    "source": [
-    "class invoiceStreamTestSuite():\n",
+    "class streamingBatchTestSuite():\n",
     "    def __init__(self):\n",
     "        self.base_data_dir = \"/FileStore/tables\"\n",
     "\n",
@@ -48,7 +48,7 @@
     "        spark.sql(\"drop table if exists invoice_line_items\")\n",
     "        dbutils.fs.rm(\"/user/hive/warehouse/invoice_line_items\", True)\n",
     "\n",
-    "        dbutils.fs.rm(f\"{self.base_data_dir}/chekpoint/invoices\", True)\n",
+    "        dbutils.fs.rm(f\"{self.base_data_dir}/chekpoints/invoices\", True)\n",
     "        dbutils.fs.rm(f\"{self.base_data_dir}/data/invoices\", True)\n",
     "\n",
     "        dbutils.fs.mkdirs(f\"{self.base_data_dir}/data/invoices\")\n",
@@ -73,25 +73,25 @@
     "\n",
     "    def runStreamTests(self):\n",
     "        self.cleanTests()\n",
-    "        iStream = invoiceStreamBatch(\"30 seconds\")\n",
-    "        streamQuery = iStream.process()\n",
+    "        iStream = invoiceStreamBatch()\n",
+    "        streamQuery = iStream.process(\"30 seconds\")\n",
     "\n",
     "        print(\"Testing first iteration of invoice stream...\") \n",
     "        self.ingestData(1)\n",
     "        self.waitForMicroBatch()        \n",
-    "        self.assertResult(1249)\n",
+    "        self.assertResult(1253)\n",
     "        print(\"Validation passed.\\n\")\n",
     "\n",
     "        print(\"Testing second iteration of invoice stream...\") \n",
     "        self.ingestData(2)\n",
     "        self.waitForMicroBatch()\n",
-    "        self.assertResult(2506)\n",
+    "        self.assertResult(2510)\n",
     "        print(\"Validation passed.\\n\") \n",
     "\n",
     "        print(\"Testing third iteration of invoice stream...\") \n",
     "        self.ingestData(3)\n",
     "        self.waitForMicroBatch()\n",
-    "        self.assertResult(3990)\n",
+    "        self.assertResult(3994)\n",
     "        print(\"Validation passed.\\n\")\n",
     "\n",
     "        streamQuery.stop()\n",
@@ -104,15 +104,15 @@
     "        self.ingestData(1)\n",
     "        self.ingestData(2)\n",
     "        iStream.process(\"batch\")\n",
-    "        self.waitForMicroBatch(30)        \n",
-    "        self.assertResult(2506)\n",
+    "        self.waitForMicroBatch()        \n",
+    "        self.assertResult(2510)\n",
     "        print(\"Validation passed.\\n\")\n",
     "\n",
     "        print(\"Testing second batch of invoice stream...\") \n",
     "        self.ingestData(3)\n",
     "        iStream.process(\"batch\")\n",
-    "        self.waitForMicroBatch(30)        \n",
-    "        self.assertResult(3990)\n",
+    "        self.waitForMicroBatch()        \n",
+    "        self.assertResult(3994)\n",
     "        print(\"Validation passed.\\n\")"
    ]
   },
@@ -143,7 +143,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "dbef7b1e-8d47-46b5-8718-64bd238db5bf",
      "showTitle": false,
