--- a/07-medallion-approach.ipynb
+++ b/07-medallion-approach.ipynb
@@ -47,7 +47,7 @@
     "        invoicesDF = self.readInvoices()\n",
     "        sQuery =  ( invoicesDF.writeStream\n",
     "                            .queryName(\"bronze-ingestion\")\n",
-    "                            .option(\"checkpointLocation\", f\"{self.base_data_dir}/chekpoint/invoices_bz\")\n",
+    "                            .option(\"checkpointLocation\", f\"{self.base_data_dir}/chekpoints/invoices_bz\")\n",
     "                            .outputMode(\"append\")\n",
     "                            .toTable(\"invoices_bz\")           \n",
     "                    ) \n",
