--- a/08-medallion-approach-test-suite.ipynb
+++ b/08-medallion-approach-test-suite.ipynb
@@ -5,7 +5,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "3e4705de-2fd5-41ce-be93-9b6be86135d5",
      "showTitle": false,
